Test prettier's equality checks.